--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -117,7 +117,9 @@
             android:layout_width="match_parent"
             android:layout_height="260dp"
             android:layout_margin="20dp"
+            android:layout_marginBottom="15dp"
             app:cardCornerRadius="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/card2projects">
 
@@ -131,7 +133,7 @@
                     android:layout_width="149dp"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/internals"/>
+                    android:src="@drawable/internals" />
 
                 <TextView
                     android:layout_width="wrap_content"
