--- a/app/src/main/res/layout/fragment_coming_soon.xml
+++ b/app/src/main/res/layout/fragment_coming_soon.xml
@@ -14,8 +14,8 @@
 
         <View
             android:id="@+id/view"
-            android:layout_width="330dp"
-            android:layout_height="330dp"
+            android:layout_width="310dp"
+            android:layout_height="310dp"
             android:background="@drawable/adg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -26,14 +26,13 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="90dp"
             android:fontFamily="@font/helveticaneu_bold"
             android:text="Recruitments"
             android:textColor="#000"
             android:textSize="35dp"
-
             app:layout_constraintBottom_toTopOf="@id/textView2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -42,12 +41,11 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="25dp"
-            android:fontFamily="@font/helveticaneue_regular"
+            android:layout_marginLeft="28dp"
+            android:fontFamily="@font/helveticaneue"
             android:text="Like never before"
             android:textColor="#000"
-            android:textSize="35dp"
+            android:textSize="28dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -56,14 +54,15 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
             android:layout_marginLeft="25dp"
-
-            android:layout_marginTop="60dp"
+            android:layout_marginRight="25dp"
             android:fontFamily="@font/helveticaneu_bold"
             android:text="Coming soon!"
             android:textColor="#FF6200"
-            android:textSize="50dp"
+            android:textSize="45dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
