--- a/app/src/main/res/layout/fragment_faq_fragment.xml
+++ b/app/src/main/res/layout/fragment_faq_fragment.xml
@@ -29,10 +29,10 @@
             android:id="@+id/faqCategories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="17dp"
             android:layout_marginTop="35dp"
             android:text="Categories"
-            android:fontFamily="@font/robotomedium"
+            android:fontFamily="@font/helveticaneue_medium"
             android:textColor="#000000"
             android:textSize="24dp"
             app:layout_constraintStart_toStartOf="parent"
