--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="newYellow">#fe9d0b</color>
+    <color name="newOrange">#Ff6200</color>
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#4255FF</color>
     <color name="bottomBarIcon">#969698</color>
