--- a/app/src/main/res/layout/activity_management_quiz.xml
+++ b/app/src/main/res/layout/activity_management_quiz.xml
@@ -207,7 +207,9 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@+id/submit_button_management"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
@@ -228,16 +230,16 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/management_edittext"
                     android:ems="10"
-                    android:scrollbars="vertical"
                     android:fontFamily="@font/helveticaneue_medium"
                     android:gravity="start|top"
                     android:hint="Your Answer"
-                    android:textColorHint="#707070"
                     android:inputType="textCapSentences|textMultiLine"
-                    android:paddingRight="10dp"
-                    android:textColor="#000"
                     android:paddingLeft="10dp"
                     android:paddingTop="12dp"
+                    android:paddingRight="10dp"
+                    android:scrollbars="vertical"
+                    android:textColor="#000"
+                    android:textColorHint="#707070"
                     android:textSize="14dp" />
             </LinearLayout>
 
