--- a/app/src/main/res/layout/fragment_management_instructions.xml
+++ b/app/src/main/res/layout/fragment_management_instructions.xml
@@ -235,9 +235,10 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/helveticaneue_regular"
-                android:text=".In case the participant tries to close the app or go back from the quiz, it shall be considered cheating and the quiz will be auto submitted."
+                android:text="In case the participant tries to close the app or go back from the quiz, it shall be considered cheating and the quiz will be auto submitted."
                 android:textColor="#000000"
-                android:textSize="16dp" />
+                android:textSize="16dp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
