--- a/app/src/main/res/layout/fragment_settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_settings_fragment.xml
@@ -58,17 +58,19 @@
             <Button
                 android:id="@+id/editProfileBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:textAllCaps="false"
-                android:textSize="12sp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:fontFamily="@font/robotoregular"
-                android:text="View Profile"
-                android:textColor="#000000"
+                android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:textAlignment="center"
                 android:background="@drawable/editprofilebtnbg"
+                android:fontFamily="@font/robotoregular"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:text="View Profile"
+                android:textAllCaps="false"
+                android:textColor="#000000"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-               />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/profileName"
