--- a/app/src/main/res/layout/fragment_about_us_fragment.xml
+++ b/app/src/main/res/layout/fragment_about_us_fragment.xml
@@ -501,10 +501,10 @@
                             android:id="@+id/gokulDesig"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
                             android:layout_marginStart="15dp"
+                            android:layout_marginTop="5dp"
                             android:layout_marginEnd="15dp"
-                            android:text="IOS App Developer"
+                            android:text="iOS App Developer"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/gokulName" />
@@ -594,10 +594,10 @@
                             android:id="@+id/prabaljitDesig"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
                             android:layout_marginStart="15dp"
+                            android:layout_marginTop="5dp"
                             android:layout_marginEnd="15dp"
-                            android:text="IOS App Developer"
+                            android:text="iOS App Developer"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/prabaljitName" />
