--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -421,7 +421,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/navya" />
+                        app:srcCompat="@drawable/abh" />
 
                     <TextView
                         android:id="@+id/mihirName"
@@ -431,7 +431,8 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:fontFamily="@font/robotomedium"
-                        android:text="Technical Advisor"
+                        android:text="Public Relations Officer"
+                        android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -446,7 +447,7 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="15dp"
-                        android:text="Navya Saxena"
+                        android:text="Abhishekh Dhall"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -554,7 +555,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/abh" />
+                        app:srcCompat="@drawable/navya" />
 
                     <TextView
                         android:id="@+id/abhishekName"
@@ -564,7 +565,7 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
                         android:fontFamily="@font/robotomedium"
-                        android:text="Public Relations Officer"
+                        android:text="Technical Advisor"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="16dp"
@@ -579,7 +580,7 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
-                        android:text="Abhishek Dhall"
+                        android:text="Navya Saxena"
                         android:layout_marginBottom="15dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
