--- a/app/src/main/res/layout/recylerhome2.xml
+++ b/app/src/main/res/layout/recylerhome2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="85dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,6 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
+
+        <TextView
+            android:id="@+id/recycler2cardmonth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/helveticaneue_regular"
+            android:text="NOV"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:visibility="invisible"
+            tools:layout_editor_absoluteX="22dp"
+            tools:layout_editor_absoluteY="48dp" />
 
         <LinearLayout
             android:id="@+id/cardDate"
@@ -27,22 +41,11 @@
                 android:id="@+id/recycler2cardday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="24"
-                android:textSize="27dp"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:fontFamily="@font/helveticaneue_medium"
+                android:text="24"
                 android:textColor="#000000"
-                />
-            <TextView
-                android:id="@+id/recycler2cardmonth"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="NOV"
-                android:textSize="18dp"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/helveticaneue_regular"
-                android:textColor="#000000"
-                />
+                android:textSize="25dp" />
 
 
         </LinearLayout>
