--- a/app/src/main/res/layout/activity_recruitment_signup.xml
+++ b/app/src/main/res/layout/activity_recruitment_signup.xml
@@ -30,7 +30,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/helveticaneue_regular"
-        android:text="Please provide the following details for signup"
+        android:text="Please provide the following details for SignUp"
         android:textColor="#707070"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,13 +43,13 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/signupedittext"
+        android:fontFamily="@font/helveticaneue_regular"
+        android:hint="Name"
+        android:inputType="textPersonName|textCapWords"
         android:paddingLeft="20dp"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:background="@drawable/signupedittext"
-        android:fontFamily="@font/helveticaneue_regular"
-        android:hint="Full name"
-        android:inputType="textPersonName|textCapWords"
         android:textColor="#000"
         android:textColorHint="#707070"
         app:layout_constraintEnd_toEndOf="parent"
