--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -443,11 +443,11 @@
                         android:id="@+id/mihirDesig"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
                         android:layout_marginStart="15dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginEnd="15dp"
                         android:layout_marginBottom="15dp"
-                        android:text="Abhishekh Dhall"
+                        android:text="Abhishek Dhall"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
