--- a/app/src/main/res/layout/activity_design_quiz.xml
+++ b/app/src/main/res/layout/activity_design_quiz.xml
@@ -29,8 +29,8 @@
         android:id="@+id/questnoLayour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quizHead">
@@ -39,22 +39,21 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
             android:fontFamily="@font/helveticaneue_medium"
+            android:singleLine="true"
             android:text="Question"
             android:textColor="#FF6200"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/textViewDesignQuestionNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="6dp"
+            android:layout_weight="1"
             android:fontFamily="@font/helveticaneue_medium"
             android:text="1/10"
             android:textColor="#ff6200"
@@ -68,7 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/helveticaneu_bold"
         android:text="What data type is the object below ? L = [1, 23, ‘hello’, 1]"
