--- a/app/src/main/res/layout/activity_recruitment_quiz.xml
+++ b/app/src/main/res/layout/activity_recruitment_quiz.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="70dp"
         android:fontFamily="@font/helveticaneu_bold"
         android:text="Technical Round"
@@ -31,8 +31,8 @@
         android:id="@+id/questnoLayour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="3dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quizHead">
@@ -41,22 +41,21 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
             android:fontFamily="@font/helveticaneue_medium"
+            android:singleLine="true"
             android:text="Question"
             android:textColor="#FF6200"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/textViewTechnicalQuestionNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="6dp"
+            android:layout_weight="1"
             android:fontFamily="@font/helveticaneue_medium"
             android:text="1/10"
             android:textColor="#ff6200"
@@ -70,7 +69,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/helveticaneu_bold"
         android:text="What data type is the object below ? L = [1, 23, ‘hello’, 1]"
@@ -282,7 +281,7 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/timetxtbg"
         android:padding="4dp"
-        android:text="9:00"
+        android:text="9:00s"
         android:textColor="#000"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
