--- a/app/src/main/res/layout/fragment_coming_soon.xml
+++ b/app/src/main/res/layout/fragment_coming_soon.xml
@@ -41,11 +41,12 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:fontFamily="@font/helveticaneue"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
+            android:fontFamily="@font/helveticaneue_regular"
             android:text="Like never before"
             android:textColor="#000"
-            android:textSize="28dp"
+            android:textSize="35dp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
